Primeira parte dos testes jasmine

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -35,7 +35,28 @@
   <script src="spec/toThrowSpec.js"></script>
   <script src="spec/toThrowErrorSpec.js"></script>
   <script src="spec/failSpec.js"></script>
-
+  <script src="spec/beforeEachSpec.js"></script>
+  <script src="spec/afterEachSpec.js"></script>
+  <script src="spec/beforeAllSpec.js"></script>
+  <script src="spec/aninharSuitesSpec.js"></script>
+  <script src="spec/spySpec.js"></script>
+  <script src="spec/toHaveBeenCalledSpec.js"></script>
+  <script src="spec/andCallTroughSpec.js"></script>
+  <script src="spec/andReturnValueSpec.js"></script>
+  <script src="spec/andReturnValuesSpec.js"></script>
+  <script src="spec/andCallFakeSpec.js"></script>
+  <script src="spec/andThrowErrorSpec.js"></script>
+  <script src="spec/callsAnySpec.js"></script>
+  <script src="spec/callsCountSpec.js"></script>
+  <script src="spec/callsArgsForSpec.js"></script>
+  <script src="spec/callsAllArgsSpec.js"></script>
+  <script src="spec/callsAllSpec.js"></script>
+  <script src="spec/callsMostRecentSpec.js"></script>
+  <script src="spec/callsFirstSpec.js"></script>
+  <script src="spec/callsResetSpec.js"></script>
+  <script src="spec/createSpySpec.js"></script>
+  <script src="spec/createSpyObjSpec.js"></script>
+  
 </head>
 
 <body>
