Finalização dos conceitos básicos

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -56,6 +56,13 @@
   <script src="spec/callsResetSpec.js"></script>
   <script src="spec/createSpySpec.js"></script>
   <script src="spec/createSpyObjSpec.js"></script>
+  <script src="spec/anySpec.js"></script>
+  <script src="spec/anythingSpec.js"></script>
+  <script src="spec/objectContainingSpec.js"></script>
+  <script src="spec/arrayContainingSpec.js"></script>
+  <script src="spec/stringMatchingSpec.js"></script>
+  <script src="spec/clockSpec.js"></script>
+  <script src="spec/meuMatcherSpec.js"></script>
   
 </head>
 
